# quickcheck

./: .gitignore  CMakeLists.txt  README
CMakeModules/: EnableCXX11.cmake  EnableExtraCompilerWarnings.cmake
quickcheck/: Property.hh  generate.hh
